complete simple index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <a1>测试页面</a1>
+    <title>Translater</title>
+    <style type="text/css">
+        h1{
+            font-size: 80px;
+            text-align: center;
+        }
+        input{
+            display:block;
+            margin-left:auto;
+            margin-right:auto;
+            width: 450px;
+            height: 45px;
+            /*border: none;*/
+            font-family: inherit;
+            font-size: inherit;
+            outline: red;
+        }
+    </style>
 </head>
-<body>
+
+
+<body style="background-color: cornsilk">
+
+    <h1>Translater</h1>
+    <input id="input" type="search" autocomplete="off" spellcheck="false"  placeholder="Type words what you want to translate">
+
 
 </body>
 </html>
